[package]
name = "downloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0.69"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
futures = "0.3.27"
clap =  { version = "4.2.1", features = ["derive"] }
async-channel = "1.8.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1