[package]
name = "downloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
futures = "0.3.30"
clap =  { version = "4.4.16", features = ["derive"] }
async-channel = "1.8.0"
duckdb = { version = "0.9.2", features = ["bundled"] }

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1